--- a/.github/workflows/unused_files.yml
+++ b/.github/workflows/unused_files.yml
@@ -26,6 +26,15 @@ jobs:
           
           pattern = r"[a-zA-Z0-9_-]+\.(png|jpeg|jpg)"
           def find_files(source):
+            if source[:-4] == ".css":
+              try:
+                  with open(source, "r") as read_contents:
+                    for line in read_contents:
+                      match = re.search(pattern, line)
+                      if match: 
+                        my_files.remove(match.group())
+                except Exception:
+                  continue
             for root, _, files in os.walk(source):
               for file in files:
                 file_path = os.path.join(root, file)
@@ -40,6 +49,7 @@ jobs:
           
           find_files("src/pages")
           find_files("src/components")
+          find_files("src/index.css")
           if len(my_files) == 0:
             print("✅ All images are used.")
             sys.exit(0)
