--- a/.github/workflows/unused_files.yml
+++ b/.github/workflows/unused_files.yml
@@ -26,7 +26,7 @@ jobs:
           
           pattern = r"[a-zA-Z0-9_-]+\.(png|jpeg|jpg)"
           def find_files(source):
-            if source[:-4] == ".css":
+            if source[-5:] == ".scss":
               try:
                 with open(source, "r") as read_contents:
                   for line in read_contents:
