edited yml file check 👉👈

--- a/.github/workflows/unused_files.yml
+++ b/.github/workflows/unused_files.yml
@@ -24,7 +24,7 @@ jobs:
             for file in files:
               my_files.append(file)
           
-          pattern = r"[a-zA-Z0-9_-]+\.(png|jpeg|jpg)"
+          pattern = r"[a-zA-Z0-9_-]+\.(png|jpeg|jpg|mp3)"
           def find_files(source):
             if source[-5:] == ".scss":
               try:
@@ -50,6 +50,7 @@ jobs:
           find_files("src/pages")
           find_files("src/components")
           find_files("src/index.scss")
+          find_files("index.html")
           if len(my_files) == 0:
             print("✅ All images are used.")
             sys.exit(0)
