--- a/.github/workflows/ui-test.yml
+++ b/.github/workflows/ui-test.yml
@@ -11,5 +11,4 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           build: npm run build
-          start: npm run start
-          
+          start: npm run dev
