--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.2",
-    "react-router-dom": "^7.5.2"
+    "react-router-dom": "^7.5.2",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
