--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.5.2",
     "react-router-dom": "^7.5.2",
-    "tone": "^15.1.22"
+    "tone": "^15.1.22",
+    "wav-encoder": "^1.3.0",
+    "wavesurfer.js": "^7.9.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
