--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -5,6 +5,6 @@ on: [pull_request]
 jobs:
   eslint: 
     uses: ./.github/workflows/lint.yml
-  unused-assets:
-    needs: eslint
-    uses: ./.github/workflows/unused_files.yml
+  # unused-assets:
+  #   needs: eslint
+  #   uses: ./.github/workflows/unused_files.yml
