--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.5.2",
     "react-router-dom": "^7.5.2",
+    "react-select": "^5.10.1",
     "tone": "^15.1.22",
     "wav-encoder": "^1.3.0",
     "wavesurfer.js": "^7.9.7"
