--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cy:open": "cypress open"
   },
   "dependencies": {
+    "@wavesurfer/react": "^1.0.11",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "lucide-react": "^0.503.0",
