--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "cy:open": "cypress open"
   },
   "dependencies": {
+    "@tensorflow/tfjs-backend-cpu": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@tensorflow/tfjs-converter": "^4.22.0",
+    "@tensorflow/tfjs-core": "^4.22.0",
     "@wavesurfer/react": "^1.0.11",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
