--- a/.github/workflows/ui-test.yml
+++ b/.github/workflows/ui-test.yml
@@ -10,5 +10,6 @@ jobs:
       - name: Cypress Run
         uses: cypress-io/github-action@v6
         with:
+          install: npm install
           build: npm run build
           start: npm run dev
